src/index.css
/*
  Color pallete from Color Hunt
  Source: https://colorhunt.co/palette/222831393e4600adb5eeeeee
*/
:root {
  --primary-bg-color: #222831;
  --secondary-bg-color: #393e46;
  --primary-color: #eee;
  --secondary-color: #00adb5;

  --success-color: #198754;

  --infinite-spin: spin 4s infinite linear;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--primary-bg-color);
  color: var(--primary-color);
}

main {
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2em 10em 5em;
}

.title {
  font-size: 3em;
}

.configs {
  background-color: var(--primary-bg-color);
  color: var(--primary-color);
  position: absolute;
  top: 1em;
  right: 1em;
  border: none;
  cursor: pointer;
}

.configs:hover {
  color: var(--secondary-color);
  animation: var(--infinite-spin);
}

.container {
  background-color: var(--secondary-bg-color);
  height: 100%;
  width: 100%;
  border-radius: 0.25em;
}

.pallete-container {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  padding: 0.5em 0;
  margin: 0 1em;
  border-bottom: 1px solid var(--primary-bg-color);
}

.pallete-color {
  height: 2em;
  width: 2em;
  margin: 0.25em;
  border: 2px solid var(--primary-bg-color);
  border-radius: 50%;
  cursor: pointer;
}

.pallete-color:hover {
  box-shadow: 0 0 0 2px var(--secondary-color);
}

.selected {
  box-shadow: 0 0 0 2px var(--success-color);
}

.board {
  height: calc(100% - 3.5em);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin: auto 0;
}

.board-row {
  display: table-row;
}

.board-cell {
  display: table-cell;
  background-color: white;
  height: 40px;
  width: 40px;
  border: 1px solid black;
  cursor: pointer;
}

.configs-aside {
  display: none;
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 10vw;
  background-color: var(--secondary-bg-color);
  box-shadow: 0 0 5px 0.5em var(--primary-bg-color);
}

.close-aside {
  background-color: var(--secondary-bg-color);
  color: var(--primary-color);
  margin: 0.5em;
  border: none;
  cursor: pointer;
  transition: 1s;
}

.close-aside:hover {
  color: var(--secondary-color);
  transition: 1s;
  transform: translateX(0.5em);
}

.configs-container {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.config {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5em;
  color: var(--secondary-color);
  font-weight: 700;
  padding: 0 1em;
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

